--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 VITE_GOOGLE_SHEETS_API_KEY=
 VITE_GOOGLE_SHEETS_SPREADSHEET_ID=
 
-# Auth Provider (Firebase/Supabase)
-VITE_AUTH_PROVIDER_URL=
-VITE_AUTH_API_KEY=
+# Firebase
+VITE_FIREBASE_API_KEY=
+VITE_FIREBASE_AUTH_DOMAIN=
+VITE_FIREBASE_PROJECT_ID=
+VITE_FIREBASE_STORAGE_BUCKET=
+VITE_FIREBASE_MESSAGING_SENDER_ID=
+VITE_FIREBASE_APP_ID=
