Integrate Google Sheets API with OAuth token
Add spreadsheets scope to Google OAuth sign-in. Persist access
token in sessionStorage for Sheets API calls. Create sheets
service with fetchProjects, addTimeEntry, fetchUserEntries,
and fetchAllEntries. Add TimeEntry type. Expects a spreadsheet
with Projects (col A) and TimeEntries (Date|Email|Project|Hours|
SubmittedAt) tabs.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
-# Google Sheets API
-VITE_GOOGLE_SHEETS_API_KEY=
-VITE_GOOGLE_SHEETS_SPREADSHEET_ID=
+# Google Sheets
+VITE_GOOGLE_SHEET_ID=
 
 # Firebase
 VITE_FIREBASE_API_KEY=
